[package]
name = "async-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures-lite = "1.12"
async-lock = "2.6"
async-net = "1.7"
async-broadcast = "0.5"
async-std = "1.12"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3"

[dev-dependencies]
